crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__parse_function_call-2.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"print(1)\\n\")"
---
syntax_tree:
0..9 Root
|0..9 Block
||0..8 Statement
|||0..8 Expression
||||0..8 PostfixOperation
|||||0..5 Value
||||||0..5 Ident
|||||||Identifier `print`
|||||5..8 PostfixOperator
||||||5..8 ArgumentList
|||||||ParensOpen `(`
|||||||6..7 Expression
||||||||6..7 Value
|||||||||6..7 NumberLiteral
||||||||||NumberLiteral `1`
|||||||ParensClose `)`
||Newline `\n`

diagnostics:
