crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__parse_function_call-3.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"print()\")"
---
syntax_tree:
0..7 Root
|0..7 Block
||0..7 Statement
|||0..7 Expression
||||0..7 PostfixOperation
|||||0..5 Value
||||||0..5 Ident
|||||||Identifier `print`
|||||5..7 PostfixOperator
||||||5..7 ArgumentList
|||||||ParensOpen `(`
|||||||ParensClose `)`

diagnostics:
