crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__parse_parenthesis-3.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"1 + (\\n2\\n+\\n3\\n)\")"
---
syntax_tree:
0..13 Root
|0..13 Block
||0..13 Statement
|||0..13 Expression
||||0..13 BinaryOperation
|||||0..2 Expression
||||||0..2 Value
|||||||0..2 NumberLiteral
||||||||NumberLiteral `1`
||||||||Whitespace ` `
|||||Plus `+`
|||||Whitespace ` `
|||||4..13 Expression
||||||4..13 Value
|||||||4..13 Parenthesis
||||||||ParensOpen `(`
||||||||Newline `\n`
||||||||6..12 Expression
|||||||||6..12 BinaryOperation
||||||||||6..8 Expression
|||||||||||6..8 Value
||||||||||||6..8 NumberLiteral
|||||||||||||NumberLiteral `2`
|||||||||||||Newline `\n`
||||||||||Plus `+`
||||||||||Newline `\n`
||||||||||10..12 Expression
|||||||||||10..12 Value
||||||||||||10..12 NumberLiteral
|||||||||||||NumberLiteral `3`
|||||||||||||Newline `\n`
||||||||ParensClose `)`

diagnostics:
