crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__parse_postfix_operator-2.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"a.b\")"
---
syntax_tree:
0..3 Root
|0..3 Block
||0..3 Statement
|||0..3 Expression
||||0..3 PostfixOperation
|||||0..1 Value
||||||0..1 Ident
|||||||Identifier `a`
|||||1..3 PostfixOperator
||||||1..3 Accessor
|||||||Dot `.`
|||||||Identifier `b`

diagnostics:
