crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__parse_postfix_operator-3.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"a.b()()\")"
---
syntax_tree:
0..7 Root
|0..7 Block
||0..7 Statement
|||0..7 Expression
||||0..7 PostfixOperation
|||||0..5 PostfixOperation
||||||0..3 PostfixOperation
|||||||0..1 Value
||||||||0..1 Ident
|||||||||Identifier `a`
|||||||1..3 PostfixOperator
||||||||1..3 Accessor
|||||||||Dot `.`
|||||||||Identifier `b`
||||||3..5 PostfixOperator
|||||||3..5 ArgumentList
||||||||ParensOpen `(`
||||||||ParensClose `)`
|||||5..7 PostfixOperator
||||||5..7 ArgumentList
|||||||ParensOpen `(`
|||||||ParensClose `)`

diagnostics:
